--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -3,25 +3,17 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-  <modules>
-    <module>transfer</module>
-    <module>model</module>
-    <module>parser-app</module>
-    <module>rest-app</module>
-    <module>upload-app</module>
-  </modules>
-  
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.4.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <artifactId>photomark</artifactId>
+    <groupId>ru.codeforensics</groupId>
+    <version>0.0.1</version>
   </parent>
-  <groupId>ru.codeforensics</groupId>
-  <artifactId>photomark</artifactId>
+
+  <groupId>ru.codeforensics.photomark</groupId>
+  <artifactId>rest-app</artifactId>
   <version>0.0.1</version>
-  <name>photomark</name>
+  <name>rest-app</name>
+  <packaging>jar</packaging>
 
   <properties>
     <java.version>1.8</java.version>
@@ -30,14 +22,15 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
+      <groupId>ru.codeforensics.photomark</groupId>
+      <artifactId>model</artifactId>
+      <version>0.0.1</version>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -50,5 +43,16 @@
       </exclusions>
     </dependency>
   </dependencies>
+
+  <build>
+    <finalName>rest-app</finalName>
+
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
