--- a/parser-app/src/main/resources/application.properties
+++ b/parser-app/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/photomark
 spring.datasource.username=photomark
 spring.datasource.password=photomark
 spring.jpa.hibernate.ddl-auto=update
+
+system.ceph.accessKey=GQAETM0ZWOEPQ40RQP38
+system.ceph.secretKey=FPFNluBqrW8SC9on2vgHepP3tVtf09MgQbHLi4RL
+system.ceph.endpoint=http://192.168.1.37:8000
+system.ceph.bucketName=photos
