--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <aws-java-sdk.version>1.8.12</aws-java-sdk.version>
   </properties>
 
   <dependencies>
@@ -30,6 +31,20 @@
       <artifactId>model</artifactId>
       <version>0.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk</artifactId>
+      <version>${aws-java-sdk.version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
