--- a/apps/parser-app/pom.xml
+++ b/apps/parser-app/pom.xml
@@ -21,6 +21,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>ru.codeforensics.photomark</groupId>
       <artifactId>services</artifactId>
       <version>0.0.1</version>
