--- a/services/pom.xml
+++ b/services/pom.xml
@@ -18,12 +18,13 @@
     <java.version>1.8</java.version>
     <aws-java-sdk.version>1.8.12</aws-java-sdk.version>
     <commons-io.version>2.6</commons-io.version>
+    <zxing.version>3.4.0</zxing.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>ru.codeforensics.photomark</groupId>
-      <artifactId>model</artifactId>
+      <artifactId>model-rdb</artifactId>
       <version>0.0.1</version>
     </dependency>
     <dependency>
@@ -40,6 +41,11 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons-io.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>${zxing.version}</version>
     </dependency>
 
     <dependency>
