--- a/apps/rest-app/pom.xml
+++ b/apps/rest-app/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <springdoc-openapi-ui.version>1.1.44</springdoc-openapi-ui.version>
   </properties>
 
   <dependencies>
@@ -31,6 +32,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>${springdoc-openapi-ui.version}</version>
     </dependency>
 
     <dependency>
