--- a/apps/rest-app/src/main/resources/application.properties
+++ b/apps/rest-app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+spring.jackson.property-naming-strategy=SNAKE_CASE
 springdoc.api-docs.path=/api-docs
 app.pwdhash.salt=KClO3
 app.session.maxAgeDays=28
