PHOTOMARK-21 Put sample to Kafka

--- a/config/src/main/resources/kafka.properties
+++ b/config/src/main/resources/kafka.properties
@@ -1,3 +1,4 @@
 spring.kafka.bootstrap-servers=127.0.0.1:9092
 spring.kafka.consumer.group-id=parser-app-group
 kafka.topic.files=photofiles
+kafka.topic.photo_collation_tasks=photofiles-collations
