--- a/config/src/main/resources/ceph.properties
+++ b/config/src/main/resources/ceph.properties
@@ -1,4 +1,5 @@
 system.ceph.accessKey=OU225HWH1E2E7U1A2IFI
 system.ceph.secretKey=BDBIEPoA20HP4n2t9mqC818RoXSpCSei1KZCRR9U
 system.ceph.endpoint=http://192.168.1.37:8000
-system.ceph.bucketName=photos
+system.ceph.bucketName.photos=photos
+system.ceph.bucketName.collation=photo-collations
