--- a/config/src/main/resources/kafka.properties
+++ b/config/src/main/resources/kafka.properties
@@ -1,5 +1,7 @@
 spring.kafka.bootstrap-servers=127.0.0.1:9092
 
 kafka.topic.files=photofiles
+kafka.topic.files.meta=photofiles-meta
+
 kafka.topic.photo_collation_tasks=photofiles-collations
 kafka.topic.photo_collation_results=photofiles-collations-results
