--- a/services/pom.xml
+++ b/services/pom.xml
@@ -29,6 +29,11 @@
     </dependency>
     <dependency>
       <groupId>ru.codeforensics.photomark</groupId>
+      <artifactId>model-cassandra</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>ru.codeforensics.photomark</groupId>
       <artifactId>config</artifactId>
       <version>0.0.1</version>
     </dependency>
