--- a/config/src/main/resources/cassandra.properties
+++ b/config/src/main/resources/cassandra.properties
@@ -1,3 +1,5 @@
 cassandra.contactpoints=localhost
 cassandra.port=9042
 cassandra.keyspace=photo_meta
+cassandra.username=cassandra
+cassandra.password=cassandra
