--- a/models/model-cassandra/pom.xml
+++ b/models/model-cassandra/pom.xml
@@ -16,12 +16,18 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <codahale.metrics.version>3.0.2</codahale.metrics.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-cassandra</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.codahale.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>${codahale.metrics.version}</version>
     </dependency>
 
   </dependencies>
