migrate to scylla

--- a/config/src/main/resources/cassandra.properties
+++ b/config/src/main/resources/cassandra.properties
@@ -1,5 +1,3 @@
-cassandra.contactpoints=localhost
+cassandra.contactpoints=10.218.98.132,10.218.99.196,10.218.98.196,10.218.98.68,10.218.99.132,10.218.99.68,10.218.99.4
 cassandra.port=9042
-cassandra.keyspace=photo_meta
-cassandra.username=cassandra
-cassandra.password=cassandra
+cassandra.keyspace=photomark
