--- a/models/model-cassandra/pom.xml
+++ b/models/model-cassandra/pom.xml
@@ -21,6 +21,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>ru.codeforensics.photomark</groupId>
+      <artifactId>transfer</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-cassandra</artifactId>
     </dependency>
