--- a/config/src/main/resources/db.properties
+++ b/config/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/photomark
-spring.datasource.username=photomark
-spring.datasource.password=photomark
+spring.datasource.url=jdbc:postgresql://10.218.99.132:5432/photomark
+spring.datasource.username=evgenyk
+spring.datasource.password=evgenyk
 spring.jpa.hibernate.ddl-auto=update
