--- a/config/src/main/resources/application-test.properties
+++ b/config/src/main/resources/application-test.properties
@@ -6,3 +6,15 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+system.ceph.accessKey=E7GW4091O4NPI498GYRF
+system.ceph.secretKey=lHAM0PHroPepa2SvhBX9Ybpkz2deDrKWbFlhki2e
+system.ceph.bucketName.photos.meta=test-photos-meta
+system.ceph.bucketName.collation=test-photo-collations
+
+kafka.topic.files=test-photofiles
+kafka.topic.files.meta=test-photofiles-meta
+kafka.topic.photo_collation_tasks=test-photofiles-collations
+kafka.topic.photo_collation_results=test-photofiles-collations-results
+
+cassandra.keyspace=test_photomark
