--- a/config/pom.xml
+++ b/config/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>photomark</artifactId>
     <groupId>ru.codeforensics</groupId>
     <version>0.0.1</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
