--- a/models/model-rdb/pom.xml
+++ b/models/model-rdb/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>photomark</artifactId>
     <groupId>ru.codeforensics</groupId>
     <version>0.0.1</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <groupId>ru.codeforensics.photomark</groupId>
