--- a/transfer/pom.xml
+++ b/transfer/pom.xml
@@ -7,6 +7,7 @@
     <groupId>ru.codeforensics</groupId>
     <artifactId>photomark</artifactId>
     <version>0.0.1</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>ru.codeforensics.photomark</groupId>
