--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>apps/parser-app</module>
     <module>apps/rest-app</module>
     <module>apps/upload-app</module>
+      <module>learn</module>
   </modules>
 
   <parent>
@@ -52,6 +53,29 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+
+
+
   </dependencies>
 
 </project>
