Sout Table in Console

--- a/learn/learnAddCrud/src/main/resources/application.properties
+++ b/learn/learnAddCrud/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-name= Maksim Kuznetsov
+#name= Maksim Kuznetsov
+
+#Connect PostgressSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=12345
