--- a/learn/learnAddCrud/pom.xml
+++ b/learn/learnAddCrud/pom.xml
@@ -50,6 +50,10 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
 
     </dependencies>
 
